# contract-fox

./: .env.example  Cargo.toml  Makefile
contracts/campaign/: Cargo.toml
contracts/campaign/src/: lib.rs
contracts/donation/: Cargo.toml
contracts/donation/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs  types.rs
contracts/withdrawal/: Cargo.toml
contracts/withdrawal/src/: lib.rs
docs/: STORAGE.md
sdk/: Cargo.toml
sdk/bindings/: README.md
sdk/bindings/rust/: mod.rs
sdk/scratch/: test_xdr.rs
sdk/src/: bindings.rs  lib.rs  transaction_builder.rs  utils.rs
src/: config.rs  main.rs
src/db/: donations_repo.rs  mod.rs
src/models/: donation_status.rs  mod.rs
src/services/: donation_verifier.rs  mod.rs
src/webhooks/: donation_confirmed.rs  mod.rs
worker/: Cargo.toml
worker/src/: logging.rs  main.rs
