[workspace]
members = [
    "contracts/donation",
    "contracts/withdrawal",
    "contracts/campaign",
    "contracts/shared",
    "sdk",
    "worker",
]

[workspace.profile.release]
opt-level = "z"
lto = true

[package]
name = "contract-fox"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest     = { version = "0.12", features = ["blocking", "json"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tokio       = { version = "1", features = ["rt-multi-thread", "macros"] }
stellar-strkey  = "0.0.8"
ed25519-dalek   = "2"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
