[package]
name = "withdrawal-contract"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "20.5.0"
contracts-shared = { path = "../shared" }
stellar-strkey = "0.0.8"
ed25519-dalek = "2"

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
